Revision history for DBIx::Class

    * Fixes
        - Fix on_connect_* not always firing in some cases - a race condition
          existed between storage accessor setters and the determine_driver
          routines, triggering a connection before the set-cycle is finished

0.08270 2014-01-30 21:54 (PST)
    * Fixes
        - Fix 0.08260 regression in DBD::SQLite bound int handling. Inserted
          data was not affected, but any function <=> integer comparison would
          have failed (originally fixed way back in 0e773352)
        - Fix failure to load DateTime formatter when connecting to Firebird
          over ODBC

    * Misc
        - All drivers based on ::Storage::DBI::Firebird::Common now return the
          same sqlt_type value (affects ::DBI::Interbase, ::DBI::Firebird and
          ::DBI::ODBC::Firebird)

0.08260 2014-01-28 18:52 (UTC)
    * New Features
        - A new zero-to-DBIC style manual: DBIx::Class::Manual::QuickStart

    * Notable Changes and Deprecations
        - Explicitly deprecate combination of distinct and selecting a
          non-column via $rs->get_column()

    * Fixes
        - More robust handling of circular relationship declarations by loading
          foreign classes less frequently (should resolve issues like
          http://lists.scsys.co.uk/pipermail/dbix-class/2013-June/011374.html)
          Note that none of this is a manifestations of a DBIC bug, but rather
          unexpected (but correct) behavior of load-order-dependent (hence
          logically broken) Resultclass hierarchies. In order to deal with this
          DBIC is scaling back a large number of sanity checks, which are to be
          reintroduce pending a better framework for source registration
        - Fix multiple edge cases of complex prefetch combining incorrectly
          with correlated subquery selections
        - Fix multiple edge cases stemming from interaction of a non-selecting