@@ -4,6 +4,8 @@ Revision history for DBIx::Class
         - Fix on_connect_* not always firing in some cases - a race condition
           existed between storage accessor setters and the determine_driver
           routines, triggering a connection before the set-cycle is finished
+        - Fix multi-value literal populate not working with simplified bind
+          specifications
 
 0.08270 2014-01-30 21:54 (PST)
     * Fixes
